--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "author": "Brent Baylon",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "openai": "^3.3.0",
-    "request": "^2.88.2",
-    "axios": "^0.26.1"
+    "request": "^2.88.2"
   },
   "engines": {
     "node": "~4.1.2"
