--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "infoweather",
   "version": "1.0.0",
-  "description": "Real-time weather information for your location provided by a bot.",
-  "main": "app.js",
+  "description": "Real-time weather information for your location provided by a Facebook Messenger bot.",
+  "main": "src/main.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node main.js"
   },
   "repository": {
     "type": "git"
