--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "author": "Brent Baylon",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.26.1",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "request": "^2.88.2"
   },
   "engines": {
-    "node": "~4.1.2"
+    "node": "10.24.1"
   }
 }
