--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "infoweather",
-  "version": "1.0.7",
-  "description": "Real-time weather information for your location provided by a Facebook Messenger bot.",
+  "version": "1.5.0",
+  "description": "Real-time weather information for your location provided by a bot.",
   "main": "src/main.js",
+  "type": "module",
   "scripts": {
-    "start": "node main.js"
+    "start": "node --experimental-modules src/main.js"
   },
   "repository": {
     "type": "git"
@@ -14,10 +15,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "request": "^2.88.2"
+    "express": "^4.18.2"
   },
   "engines": {
-    "node": "10.24.1"
+    "node": "16.x"
   }
 }
