--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": "16.x"
+    "express": "^4.18.2",
+    "moment-timezone": "^0.5.43"
   }
 }
