--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/main.js",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-modules src/main.js"
+    "start": "node --experimental-modules src/main.js",
+    "test": "node --experimental-modules src/main.js"
   },
   "repository": {
     "type": "git"
