--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-modules src/main.js",
-    "test": "node --experimental-modules src/main.js"
+    "test": "node src/main.js",
+    "dev-test": "node --experimental-modules src/main.js"
   },
   "repository": {
     "type": "git"
