--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-modules src/main.js",
-    "test": "node --experimental-modules src/handlers/misc/test.js"
+    "test": "node --experimental-modules src/misc/test.js"
   },
   "repository": {
     "type": "git"
